--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,18 @@
 :root {font-size: calc(16 * 100vw / 1366);}
 .Kevina{font-family: var(--font-whisper);}
 .Paragraph{font-family: var(--font-fira)};
+@keyframes transitionIn {
+    from {
+      opacity: 0;
+      transform: translateY(-1rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+}
+
+body {
+animation: transitionIn 0.75s;
+}
